# ELM

./: .gitignore  Dockerfile  Makefile  README.md  cloudbuild.yaml  elm.json  version_append.sh
dev/: heat.xcf  pages image.xcf
elm-simple-animation/src/Simple/: Animation.elm
server/: Cargo.toml
server/migrations/2021-06-08-175156_posts/: up.sql
server/migrations/2021-06-08-175200_images/: up.sql
server/src/: cors.rs  main.rs  models.rs  schema.rs  types.rs
src/: Main.elm  Palette.elm  Ports.elm  Shared.elm  Storage.elm  View.elm
src/Pages/: Electronics.elm  Home_.elm  Ip.elm  Newsroom.elm  NotFound.elm  Obsolescence.elm  Oil.elm  Papers.elm  Rnd.elm  Terms.elm  Whoweare.elm
