[package]
name = "elm-spa_server"
version = "0.1.0"
authors = ["13r0ck <bnr@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
chrono = { version = "0.4.18", features = ["serde"] }
diesel = { version = "1.4.7", features = ["chrono", "postgres"] }
rocket_contrib = { version = "0.4.10", features = ["diesel_postgres_pool"] }
serde = "1.0.126"
serde_json = "1.0.64"
serde_derive = "1.0.126"
image = "0.23.14"
base64 = "0.13.0"
google-signin = "0.3.0"